Moving from ES6 to TypeScript and Snowpack to Vite

--- a/.npmignore
+++ b/.npmignore
@@ -3,8 +3,11 @@ jest
 .babelrc
 jest.config.js
 index.html
-snowpack.config.json
 netlify.toml
 .node-version
 .eslintrc.js
 src
+spec
+tsconfig.json
+vite.config.js
+.prettierignore
