--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "np": "np --no-2fa --no-test"
   },
   "devDependencies": {
-    "@babel/core": "7.14.3",
+    "@babel/core": "7.15.8",
     "@babel/plugin-syntax-class-properties": "7.12.13",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-typescript": "^7.13.0",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
+    "@hotwired/stimulus": "^3.0.1",
     "np": "^7.5.0",
-    "prettier-standard": "16.3.0",
-    "stimulus": "^2.0.0",
-    "typescript": "^4.2.4",
-    "vite": "^2.3.4"
+    "prettier-standard": "16.4.1",
+    "typescript": "^4.4.3",
+    "vite": "^2.6.5"
   },
   "peerDependencies": {
-    "stimulus": "^2.0.0"
+    "@hotwired/stimulus": "^3.0.1"
   }
 }
