--- a/package.json
+++ b/package.json
@@ -17,28 +17,31 @@
   "homepage": "https://github.com/stimulus-components/stimulus-read-more",
   "private": false,
   "main": "dist/stimulus-read-more.umd.js",
-  "module": "dist/stimulus-read-more.es.js",
+  "module": "dist/stimulus-read-more.mjs",
   "scripts": {
     "format": "prettier-standard  '**/*.{ts,css,html}' --format",
     "lint": "prettier-standard  '**/*.{ts,css,html}' --lint",
     "dev": "vite",
-    "prod": "vite build --config /dev/null",
+    "prod": "vite build --mode netlify",
     "build": "tsc --noEmit && vite build",
     "version": "yarn build",
     "np": "np --no-2fa --no-test"
   },
   "devDependencies": {
-    "@babel/core": "7.15.8",
+    "@babel/core": "7.20.7",
     "@babel/plugin-syntax-class-properties": "7.12.13",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
-    "@hotwired/stimulus": "^3.0.1",
-    "np": "^7.5.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@hotwired/stimulus": "^3.2.1",
+    "autoprefixer": "^10.4.13",
+    "np": "^7.6.2",
+    "postcss": "^8.4.20",
     "prettier-standard": "16.4.1",
-    "typescript": "^4.4.3",
-    "vite": "^2.6.5"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.3"
   },
   "peerDependencies": {
-    "@hotwired/stimulus": "^3.0.1"
+    "@hotwired/stimulus": "^3.2.1"
   }
 }
